login register page added.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
                 <input type="text" class="bui-form-control" placeholder="Search">
             </div>
             <div class="bui-navbar-menu">
-                <button class="bui-btn bui-btn-danger">Login</button>
+                <a href="login.html">
+                    <button class="bui-btn bui-btn-danger">Login</button>
+                </a>
             </div>
         </div>
     </nav>
