like video page and watch later page added.

--- a/login.html
+++ b/login.html
@@ -33,8 +33,8 @@
             <a href="explore.html"><li><i class="bi bi-speedometer2"></i> Explore</li></a>
             <a href="playlist.html"><li><i class="bi bi-collection-play"></i> Playlist</li></a>
             <a href="history.html"><li class="sidebar-menu-active"><i class="bi bi-clock-history"></i> History</li></a>
-            <a href="#"><li><i class="bi bi-play-btn"></i> Watch Later</li></a>
-            <a href="#"><li><i class="bi bi-hand-thumbs-up"></i> Liked Videos</li></a>
+            <a href="watch-later.html"><li><i class="bi bi-play-btn"></i> Watch Later</li></a>
+            <a href="like-video.html"><li><i class="bi bi-hand-thumbs-up"></i> Liked Videos</li></a>
             <div class="sidebar-hr"></div>
             <a href="#"><li><i class="bi bi-music-note-list"></i> Music</li></a>
             <a href="#"><li><i class="bi bi-trophy"></i> Sport</li></a>
